#

2011-08-14  Christian Heller  <christian.heller@tuxtax.de>

        * Move some files from "executor/modifier/getter/" into "executor/modifier/knowledge_getter/"
        * Adapt reception of signal model from file in "initialiser.c"
        * Adapt old files of "applicator/communicator/" and move into new directory "applicator/communicate/"

2011-08-13  Christian Heller  <christian.heller@tuxtax.de>

        * Add new directory "executor/searcher/name_finder/" for finding
            a part with the given name in an investigated array/item/part
        * Simplify funtionality of "name_part_getter.c" with "part_name_finder.c"
            (first indentify the index of a searched part and only afterwards, get that part)
        * Add new directory "executor/modifier/name_getter/" for getting
            a part with the given name in an investigated array/item/part

2011-08-05  Christian Heller  <christian.heller@tuxtax.de>

        * Complete new version of "knowledge_part_getter.c" (formerly "get_universal_compound_element_by_name")
        * Adapt "handler.c" and delete "knowledge_handler.c" and "encapsulated_handler.c"
        * Hand over name as reference wherever "get_part_branch" is called

2011-08-04  Christian Heller  <christian.heller@tuxtax.de>

        * Delete outdated source files and -directories
        * Adapt files in "controller/" directory to new container infrastructure
        * Add directory "executor/modifier/appender/"
        * Activate new versions of several functions by deleting "_NEW" suffix

2011-07-29  Christian Heller  <christian.heller@tuxtax.de>

        * Eliminate warnings by including files or adding forward declarations of functions, respectively

2011-07-28  Christian Heller  <christian.heller@tuxtax.de>

        * Make "helper.c" and "informant.c" function again
        * Start refactoring file "manager.c"

2011-07-27  Christian Heller  <christian.heller@tuxtax.de>
