@@ -11,7 +11,6 @@
 # @author Christian Heller <christian.heller@tuxtax.de>
 #
 
-        * Correct "hierarchical_part_getter.c" which still uses old version of "get_name_part"
         * Adapt files in directory "applicator/"
         * Adapt "flow_operation_handler.c"
         * Move all operation handlers one directory up
